--- a/readme
+++ b/readme
@@ -2,7 +2,7 @@
 
 ### Required:
 
-1. Coins for Collateral <br>
+1. Coins for Collateral 
 
 2. Download Local Wallet for your operating system: : https://github.com/Roicoinorg/Roicoinorg/releases/tag/1000
 
